<!--
  ~ Copyright (c) 2014 Vishal Disawar
  ~
  ~ Dual licensed under Apache2.0 and MIT Open Source License (included below):
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    tools:context="com.coursera.cardswap.CardFragment"
    android:background="@drawable/bcard_background">

    <TextView
        android:id="@+id/person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_name"
        android:textSize="32sp"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/business_name"
        android:layout_below="@id/person_name"
        android:layout_centerHorizontal="true"
        android:text="@string/sample_business"
        android:paddingTop="10dp"
        android:textSize="20sp"
        android:textColor="#FFFFFF" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/email_website_container">

        <TextView
            android:id="@+id/person_email"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/sample_email"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/person_website"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/sample_website"
            android:textColor="#FFFFFF" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/email_website_container"
        android:id="@+id/address_number_container">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/person_address"
            android:text="@string/sample_address"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/person_citystate"
            android:text="@string/sample_citystate"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/person_number"
            android:text="@string/sample_number"
            android:textColor="#FFFFFF" />

    </TableRow>
</RelativeLayout>
